FEAT: notification 관련 조회 로직 수정